--- a/JVM/类加载.md
+++ b/JVM/类加载.md
@@ -207,6 +207,80 @@ public class HelloWorld {
 
 ### javap工具
 
+自己分析类文件结构太麻烦了，Oracle提供了javap工具来反编译class文件
+
+```java
+$ javap -v HelloWorld.class
+Classfile /E:/learnjava/jvm/src/main/java/cn.ljtnono/demo/cn/ljtnono/demo/HelloWorld.class
+  Last modified 2019-12-22; size 478 bytes
+  MD5 checksum 4930285069f4aa869bbd022d3d884d7a
+  Compiled from "HelloWorld.java"
+public class cn.ljtnono.demo.HelloWorld
+  minor version: 0
+  major version: 52
+  flags: ACC_PUBLIC, ACC_SUPER
+Constant pool:
+   #1 = Methodref          #6.#17         // java/lang/Object."<init>":()V
+   #2 = Fieldref           #18.#19        // java/lang/System.out:Ljava/io/PrintStream;
+   #3 = String             #20            // hello world
+   #4 = Methodref          #21.#22        // java/io/PrintStream.println:(Ljava/lang/String;)V
+   #5 = Class              #23            // cn/ljtnono/demo/HelloWorld
+   #6 = Class              #24            // java/lang/Object
+   #7 = Utf8               <init>
+   #8 = Utf8               ()V
+   #9 = Utf8               Code
+  #10 = Utf8               LineNumberTable
+  #11 = Utf8               main
+  #12 = Utf8               ([Ljava/lang/String;)V
+  #13 = Utf8               MethodParameters
+  #14 = Utf8               args
+  #15 = Utf8               SourceFile
+  #16 = Utf8               HelloWorld.java
+  #17 = NameAndType        #7:#8          // "<init>":()V
+  #18 = Class              #25            // java/lang/System
+  #19 = NameAndType        #26:#27        // out:Ljava/io/PrintStream;
+  #20 = Utf8               hello world
+  #21 = Class              #28            // java/io/PrintStream
+  #22 = NameAndType        #29:#30        // println:(Ljava/lang/String;)V
+  #23 = Utf8               cn/ljtnono/demo/HelloWorld
+  #24 = Utf8               java/lang/Object
+  #25 = Utf8               java/lang/System
+  #26 = Utf8               out
+  #27 = Utf8               Ljava/io/PrintStream;
+  #28 = Utf8               java/io/PrintStream
+  #29 = Utf8               println
+  #30 = Utf8               (Ljava/lang/String;)V
+{
+  public cn.ljtnono.demo.HelloWorld();
+    descriptor: ()V
+    flags: ACC_PUBLIC
+    Code:
+      stack=1, locals=1, args_size=1
+         0: aload_0
+         1: invokespecial #1                  // Method java/lang/Object."<init>":()V
+         4: return
+      LineNumberTable:
+        line 3: 0
+
+  public static void main(java.lang.String[]);
+    descriptor: ([Ljava/lang/String;)V
+    flags: ACC_PUBLIC, ACC_STATIC
+    Code:
+      stack=2, locals=1, args_size=1
+         0: getstatic     #2                  // Field java/lang/System.out:Ljava/io/PrintStream;
+         3: ldc           #3                  // String hello world
+         5: invokevirtual #4                  // Method java/io/PrintStream.println:(Ljava/lang/String;)V
+         8: return
+      LineNumberTable:
+        line 5: 0
+        line 6: 8
+    MethodParameters:
+      Name                           Flags
+      args
+}
+SourceFile: "HelloWorld.java"
+```
+
 
 
 ## 类加载的阶段
