--- a/linux/常用配置.md
+++ b/linux/常用配置.md
@@ -22,5 +22,10 @@ http.cors.allow-origin: "*"
   sysctl -w vm.max_map_count=262144
   # 永久修改
   echo "vm.max_map_count=262144" >> /etc/sysctl.conf
+  sysctl -p /etc/sysctl.conf
   ```
+
+
+
+
 
