[feat]加入git常见60个命令部分内容

--- a/linux/常用配置.md
+++ b/linux/常用配置.md
@@ -69,3 +69,19 @@ ZONE=public
 ```bash
 systemctl restart network
 ```
+
+
+## firewall 相关操作
+
+### 永久开启某个端口
+
+```shell
+firewall-cmd --zone=public --add-port=27017/tcp --permanent
+```
+
+### 重新加载防火墙
+
+```shell
+firewall-cmd --reload
+```
+
