[feat]补充firewall关闭端口

--- a/linux/常用配置.md
+++ b/linux/常用配置.md
@@ -41,6 +41,12 @@ systemctl restart network
 firewall-cmd --zone=public --add-port=27017/tcp --permanent
 ```
 
+### 永久关闭某个端口
+
+```shell
+firewall-cmd --remove-port=80/tcp --permanent
+```
+
 ### 重新加载防火墙
 
 ```shell
