[feat]新增centos配置yum源

--- a/linux/常用配置.md
+++ b/linux/常用配置.md
@@ -1,3 +1,5 @@
+
+
 ## Centos7网卡配置
 
 ```bash
@@ -47,9 +49,56 @@ firewall-cmd --zone=public --add-port=27017/tcp --permanent
 firewall-cmd --remove-port=80/tcp --permanent
 ```
 
+### 查看已开放的端口号
+
+```shell
+firewall-cmd --list-ports
+```
+
 ### 重新加载防火墙
 
 ```shell
 firewall-cmd --reload
 ```
+
+
+
+## Centos7 配置yum为阿里源
+
+1、备份原.repo文件
+
+```bash
+mv /etc/yum.repos.d/CentOS-Base.repo /etc/yum.repos.d/CentOS-Base.repo.backup
+```
+
+2、下载新的.repo文件
+
+```bash
+CentOS 6
+wget -O /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-6.repo
+curl -o /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-6.repo
+
+CentOS 7
+wget -O /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo
+curl -o /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-7.repo    
+
+CentOS 8
+wget -O /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-8.repo
+curl -o /etc/yum.repos.d/CentOS-Base.repo http://mirrors.aliyun.com/repo/Centos-8.repo
+```
+
+3、重构缓存
+
+```bash
+yum clean all
+yum makecache
+```
+
+4、执行更新
+
+```bash
+yum update
+```
+
+
 
