--- a/linux/常用配置.md
+++ b/linux/常用配置.md
@@ -102,3 +102,47 @@ yum update
 
 
 
+## 临时开启docker端口
+
+```
+临时开启docker 端口
+
+1. 获取容器ip地址
+   docker inspect <container_id> | grep IPAddress
+
+2. nat转发
+   iptables -t nat -A DOCKER -p tcp --dport <host_port> -j DNAT --to-destination <container_ip>:<docker_port>
+   iptables -t nat -A POSTROUTING -j MASQUERADE -p tcp --source <container_ip> --destination <container_ip> --dport <docker_port>
+   iptables -A DOCKER -j ACCEPT -p tcp --destination <container_ip> --dport <docker_port>
+
+3. 参数说明
+   container_ip：要做端口映射的容器ip
+   host_port：要映射到宿主机的端口
+   docker_port：要映射的端口，即容器中的端口
+```
+
+
+
+## 离线rmp包以及其依赖包
+
+1、安装yumdownloader
+
+```shell
+yum install yum-utils -y
+```
+
+2、使用yumdownloader下载离线安装包
+
+```shell
+yumdownloader --resolve --destdir <path> <package>
+# 其中 path代表下载的包存储路径，package代表要下载的包名
+```
+
+
+
+
+
+
+
+
+
