--- a/mysql/常用设置.md
+++ b/mysql/常用设置.md
@@ -31,3 +31,15 @@ show binary logs;
 RESET MASTER;
 ```
 
+## 快速导出大量数据
+
+```shell
+mysql -uroot -p'Xmirror!@#123' xmirror_oss -e "SELECT * INTO OUTFILE '/oss/software/mysql/a.sql' FIELDS TERMINATED BY ',' FROM a"
+```
+
+## 快速导入大量数据
+
+```shell
+mysql -uroot -p'Xmirror!@#123' xmirror_oss -e "LOAD DATA INFILE 'a.sql' INTO TABLE a FIELDS TERMINATED BY ','"
+```
+
