--- a/linux/常用配置.md
+++ b/linux/常用配置.md
@@ -142,7 +142,54 @@ yumdownloader --resolve --destdir <path> <package>
 
 
 
+## 关闭selinux
 
+Dockerfile构建时出现类似没有共享库权限的问题时，可以尝试关闭selinux
+
+```bash
+setenforce 0
+# 永久关闭 修改/etc/sysconfig/selinux文件设置
+sed -i 's/SELINUX=permissive/SELINUX=disabled/' /etc/sysconfig/selinux
+sed -i "s/SELINUX=enforcing/SELINUX=disabled/g" /etc/selinux/config
+```
+
+
+
+## elasticsearch安装及启动异常解决方式
+
+elasticsearch.yml配置文件
+
+```yaml
+bootstrap.memory_lock: false
+bootstrap.system_call_filter: false
+cluster.initial_master_nodes: ["node-1"]
+# 数据存储路径
+path.data: /xxx/xx/data
+path.logs: /xxx/xx/logs
+network.host: 0.0.0.0
+http.port: 9200
+http.cors.enabled: true
+http.cors.allow-origin: "*"
+```
+
+* **max virtual memory areas vm.max_map_count [65530] is too low, increase to at least [262144]**
+
+  ```shell
+  # 临时修改
+  sysctl -w vm.max_map_count=262144
+  # 永久修改
+  echo "vm.max_map_count=262144" >> /etc/sysctl.conf
+  sysctl -p /etc/sysctl.conf
+  ```
+
+* **max file descriptors [4096] for elasticsearch process is too low, increase to at least [65535]**
+
+  ```shell
+  vim /etc/security/limits.conf
+  # 添加以下内容 其中elastic是启动elasticsearch的用户名
+  elastic hard nofile 65536
+  elastic soft nofile 65536
+  ```
 
 
 
